fix(Transaction): make token transfer status more visible (caps, color)

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -338,3 +338,11 @@ hr {
   background: $highlight;
   border-radius: 3px;
 }
+
+.erc20-transfer-success {
+  color: green;
+}
+
+.erc20-transfer-fail {
+  color: red;
+}
